--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "@cap-js/cds-types": "^0.10.0"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds-serve",
+    "watch-adminequipmentmapp": "cds watch --open adminequipmentmapp/webapp/index.html?sap-ui-xx-viewCache=false"
   },
-"cds": {
-  "requires": {
-    "db": {
-      "kind": "sqlite",
-      "credentials": {
-        "url": "db.sqlite"
+  "cds": {
+    "requires": {
+      "db": {
+        "kind": "sqlite",
+        "credentials": {
+          "url": "db.sqlite"
+        }
       }
     }
-  }
-}
+  },
+  "sapux": [
+    "app/adminequipmentmapp"
+  ]
 }
