--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,7 @@
     // "csv (semicolon)",
     // "tab",
     // "tsv"
-  ]
+  ],
+  "SAP HANA Database Explorer.ShowXsAdvancedConnections": true,
+  "cds.checkDevKitInstalled": false
 }
